# boringssl_dart

./: .gitignore  .gitmodules  .pubignore  LICENSE  README.md  ffigen.dart  pubspec.yaml
.github/workflows/: integration_test.yaml  test.yml
benchmark/: hash_benchmark.dart
doc/: design-notes.md
example/: boringssl_dart_example.dart  ec_spki_roundtrip.dart
example/flutter_app/: README.md  pubspec.yaml
example/flutter_app/android/app/: build.gradle.kts
example/flutter_app/android/app/src/main/: AndroidManifest.xml
example/flutter_app/android/app/src/main/kotlin/com/example/boringssl_dart_flutter_example/: MainActivity.kt
example/flutter_app/integration_test/: crypto_test.dart
example/flutter_app/ios/Runner/: Info.plist
example/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
example/flutter_app/lib/: main.dart
hook/: build.dart  link.dart  symbols.dart  toolchain.dart
lib/: boringssl_dart.dart
lib/src/: aes_cbc.dart  aes_ctr.dart  aes_gcm.dart  bindings.g.dart  ec.dart  ecdh.dart  ecdsa.dart  hash.dart  hkdf.dart  hmac.dart  key.dart  pbkdf2.dart  random.dart  rsa.dart  rsa_oaep.dart  rsa_pss.dart  rsa_ssa_pkcs1.dart  util.dart  version.g.dart
native/: CMakeLists.txt  boringssl_commit.txt  boringssl_dart.cc
test/: asymmetric_test.dart  boringssl_dart_test.dart  encryption_test.dart  kdf_test.dart  leak_test.dart  mac_test.dart  nist_aes_ctr_test.dart  test_keys.dart  validation_test.dart  version_test.dart
test/wycheproof/: aes_cbc_test.dart  aes_gcm_test.dart  ecdh_test.dart  ecdsa_test.dart  hkdf_test.dart  hmac_test.dart  pbkdf2_test.dart  rsa_oaep_test.dart  rsa_pkcs1_test.dart  rsa_pss_test.dart  runner.dart
test/wycheproof/vectors/: SOURCE.txt
tool/: sync_wycheproof.dart
